Add JWT token service, update user auth flow, and remove old LoginRequestDto

--- a/TokenLesson2/appsettings.json
+++ b/TokenLesson2/appsettings.json
@@ -9,5 +9,10 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=TokenLesson2; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "8121a3dc-2167-4498-92ec-d5ed5e6c20eb",
+    "Issuer": "TokenLesson2",
+    "Audience": "TokenLesson2"
   }
 }
